# selma

./: .gitignore  Graph.ipynb  Markov.ipynb  Playground.ipynb  README.md  Slides.ipynb  Test.ipynb  Visits.ipynb  pyproject.toml  requirements.txt  scaletta.md
animations/: Graph.ipynb  Test.ipynb  Visits.ipynb
data/: alighieri.txt  papini.txt
docs/: index.html  lm.html  se.html
locandina/: locandina.md
selma/: __init__.py  bags.py  datastructures.py  geom.py  graph.py  mklm.py
slides/: index.ipynb  lib.py  lm.ipynb  se.ipynb
slides/animations/: Graph.ipynb  Markov.ipynb  Test.ipynb  Visits.ipynb  WorkBench.ipynb  markov.py  pagerank.py  simple.py  visits.py
src/selma/: UG.ipynb  __init__.py  animations.py  datastructures.py  geom.py  graph.py
