[project]
name = "selma"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Massimo Santini", email = "santini@di.unimi.it" }
]
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
]
dynamic = ["version"]

[project.scripts]
selma = "selma:main"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.hatch.version]
source = "versioningit"
path = "src/selma/__init__.py"