[project]
name = "selma"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Massimo Santini", email = "santini@di.unimi.it" }
]
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.0",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pygraphviz>=1.14",
]
dynamic = ["version"]

[project.scripts]
selma = "selma:main"

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.hatch.version]
source = "versioningit"
