[project]
name = "selma"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Massimo Santini", email = "santini@di.unimi.it" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "manim>=0.19.0",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pygraphviz>=1.14",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = ["*.ipynb"]
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.hatch.version]
source = "versioningit"

[tool.hatch.build.targets.wheel]
packages = ["selma"]

[tool.hatch.build.targets.sdist]
include = [
  "selma",
  "README.md",
  "pyproject.toml",
  "LICENSE-CC.txt",
  "LICENSE-GPL.txt"
]
